--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
 django-sortedm2m~=4.0.0
 django-reversion~=5.1.0
 django-taggit~=6.0.0
-netjsonconfig @ https://github.com/openwisp/netjsonconfig/tarball/1.2
-django-x509 @ https://github.com/openwisp/django-x509/tarball/1.3
-django-loci @ https://github.com/openwisp/django-loci/tarball/1.2
 django-flat-json-widget~=0.3.1
-openwisp-users @ https://github.com/openwisp/openwisp-users/tarball/1.2
-openwisp-utils[celery,channels] @ https://github.com/openwisp/openwisp-utils/tarball/1.2
-openwisp-notifications @ https://github.com/openwisp/openwisp-notifications/tarball/1.2
-openwisp-ipam @ https://github.com/openwisp/openwisp-ipam/tarball/1.2
-djangorestframework-gis @ https://github.com/openwisp/django-rest-framework-gis/tarball/1.2
 paramiko[ed25519]~=3.5.1
 scp~=0.15.0
 django-cache-memoize~=0.2.1
 shortuuid~=1.0.13
 netaddr~=1.3.0
 django-import-export~=4.1.1
+
+# Editable OpenWISP modules
+-e git+https://github.com/openwisp/netjsonconfig.git#egg=netjsonconfig
+-e git+https://github.com/openwisp/django-x509.git#egg=django_x509
+-e git+https://github.com/openwisp/django-loci.git#egg=django_loci
+-e git+https://github.com/sagar-nexapp/openwisp-users.git#egg=openwisp_users
+-e git+https://github.com/sagar-nexapp/openwisp-utils.git#egg=openwisp_utils
+-e git+https://github.com/sagar-nexapp/openwisp-notifications.git#egg=openwisp_notifications
+-e git+https://github.com/openwisp/openwisp-ipam.git#egg=openwisp_ipam
+-e git+https://github.com/openwisp/django-rest-framework-gis.git#egg=djangorestframework_gis
