--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Third-party packages
 django-sortedm2m~=4.0.0
 django-reversion~=5.1.0
 django-taggit~=6.0.0
@@ -9,12 +10,14 @@ shortuuid~=1.0.13
 netaddr~=1.3.0
 django-import-export~=4.1.1
 
-# Editable OpenWISP modules
+# OpenWISP modules (local editable forks)
+-e ../openwisp-users
+-e ../openwisp-utils
+-e ../openwisp-notifications
+
+# OpenWISP modules (read-only from GitHub)
 -e git+https://github.com/openwisp/netjsonconfig.git#egg=netjsonconfig
 -e git+https://github.com/openwisp/django-x509.git#egg=django_x509
 -e git+https://github.com/openwisp/django-loci.git#egg=django_loci
--e git+https://github.com/sagar-nexapp/openwisp-users.git#egg=openwisp_users
--e git+https://github.com/sagar-nexapp/openwisp-utils.git#egg=openwisp_utils
--e git+https://github.com/sagar-nexapp/openwisp-notifications.git#egg=openwisp_notifications
 -e git+https://github.com/openwisp/openwisp-ipam.git#egg=openwisp_ipam
 -e git+https://github.com/openwisp/django-rest-framework-gis.git#egg=djangorestframework_gis
