--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,8 @@
+# Editable install of openwisp-utils from your GitHub fork with extras
+-e git+https://github.com/sagar-nexapp/openwisp-utils.git@main#egg=openwisp_utils[qa,selenium,channels-test]
+
+# Testing and database dependencies
 pytest-cov~=6.2.1
-openwisp-utils[qa,selenium,channels-test] @ https://github.com/openwisp/openwisp-utils/tarball/1.2
 django_redis~=6.0.0
 mock-ssh-server~=0.9.1
 responses~=0.25.7
